@@ -82,7 +82,7 @@ EOF
 diff filtered.csv expected
 
 grep -v 0,0 filtered.csv >input.csv
-ltlsynt -F input.csv/-2 --csv=out.csv -q || exit 2
+ltlsynt -F input.csv/-2 --csv=out.csv -q
 $PYTHON test.py
 cat >expected <<EOF
 source,formula,algo,realizable,strat_num_states
@@ -90,5 +90,16 @@ input.csv:2,G(i1 <-> Xo1),lar,1,3
 input.csv:3,F(i1 xor i2) <-> Fo1,lar,1,2
 input.csv:4,i1 <-> F(o1 xor o2),lar,1,3
 input.csv:5,o1 & F(i1 <-> o2),lar,1,2
+EOF
+diff filtered.csv expected
+
+ltlsynt -F input.csv/-2 --csv-without-formula=out.csv -q
+cut out.csv -d, -f1,2 >filtered.csv
+cat >expected <<EOF
+"source","algo"
+"input.csv:2","lar"
+"input.csv:3","lar"
+"input.csv:4","lar"
+"input.csv:5","lar"
 EOF
 diff filtered.csv expected
