@@ -5,8 +5,11 @@ New in spot 2.12.0.dev (not yet released)
   - ltlmix is a new tool that generates formulas by combining existing
     ones. See https://spot.lre.epita.fr/ltlmix.html for examples.
 
-  - ltlsynt --csv=FILENAME will now save the source filename for
-    the processed formulas as the first column of the CSV file.
+  - ltlsynt --csv=FILENAME will now save the source filename for the
+    processed formulas as the first column of the CSV file.  A new
+    option --csv-without-formula=FILENAME can be used to save
+    everything but the formula column (as it can be very large, and
+    can be found from the source filename).
 
   - ltlsynt learned a --part-file option, to specify the partition of
     input/output proposition from a *.part file, as used in several
